--- a/lab_notebook.ipynb
+++ b/lab_notebook.ipynb
@@ -47,12 +47,12 @@
       ],
       "metadata": {
         "id": "b5aVjNokoLDH",
-        "outputId": "be2bfc7f-3016-49aa-d2fe-2257f3bac7bd",
+        "outputId": "3525a674-7010-4da9-cd78-ad80067df6fe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -64,12 +64,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**1. Load the data**"
+      ],
+      "metadata": {
+        "id": "UWFnY9De9WBc"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
         "collapsed": true,
         "id": "ieILSKyVoB6Y",
-        "outputId": "bc98214f-9c49-4894-af0c-250dd85f2838",
+        "outputId": "578a2d6b-1bb1-4fd6-829c-83b45b5db4a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -330,27 +339,37 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**2. What is the shape of X_train and X_test? What is the shape of X_train[i] and X_test[i] for each index i? What is the shape of y_train and y_test?**"
+      ],
+      "metadata": {
+        "id": "c7TchYqg9XO1"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#What is the shape of these variables\n",
-        "\n",
+        "#What is the shape of X_train and X_test?\n",
         "print(X_train.shape)\n",
         "print(X_test.shape)\n",
         "\n",
+        "#What is the shape of X_train[i] and X_test[i] for each index i?\n",
         "print(X_train[i].shape)\n",
         "print(X_test[i].shape)\n",
         "\n",
+        "#What is the shape of y_train and y_test?\n",
         "print(y_train.shape)\n",
         "print(y_test.shape)"
       ],
       "metadata": {
         "id": "rJ1SNkRBpb_q",
-        "outputId": "09f0ff64-c6a3-4cf3-aabb-d77928c2820a",
+        "outputId": "598646d5-fd1e-43bf-c2c2-0bf49c74a563",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,6 +386,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The output of this code shows that the X_train and X_test has 60,000 and 10,000 images respectively each with a 28 by 28 matrix array. The X_train i and X_test i show individual images of 28 by 28 matrix. The y_train and y_test show that there are just 60,000  and 10,000 images respectively."
+      ],
+      "metadata": {
+        "id": "RViaV6vc9pe1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**3. Use Numpy's .reshape() method to covert the training and testing data from a matrix into an vector of features. So, X_test[index].reshape((1,784)) will convert the  𝑖𝑛𝑑𝑒𝑥 -th element of X_test into a  28×28=784 -length row vector of values, rather than a matrix. Turn X_train into an  𝑁×784  matrix  𝑋  that is suitable for scikit-learn's kNN classifier where  𝑁  is the number of observations and  784=28∗28  (you could use, for example, a for loop).**"
+      ],
+      "metadata": {
+        "id": "pxEpTGE79l79"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Reshape into a feature that is just 784 long instead of an array\n",
@@ -381,8 +418,17 @@
       "metadata": {
         "id": "88fR7TXMqhBZ"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**4. Use the reshaped X_test and y_test data to create a  𝑘 -nearest neighbor classifier of digit. What is the optimal number of neighbors  𝑘 ? If you can't determine this, play around with different values of  𝑘  for your classifier.**"
+      ],
+      "metadata": {
+        "id": "gf8u0PIb9-uI"
+      }
     },
     {
       "cell_type": "code",
@@ -410,7 +456,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -426,6 +472,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**5. For the optimal number of neighbors, how well does your predictor perform on the test set? Report the accuracy, compute a confusion matrix, and explain your findings.**\n"
+      ],
+      "metadata": {
+        "id": "gg4I8FYA-D-0"
+      }
     },
     {
       "cell_type": "code",
@@ -452,7 +507,7 @@
           "height": 508
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,6 +528,64 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "  For the optimal number of neighbors, which is k=3, the accuracy is 0.9705, meaning that the model correctly predicts a very high percentage of handwritten digits in the test set. This model correctly predicted zero  974 times, one 1133 times, two 988 times, three 976 times, four 945 times, five 866 times, six 944 times, seven 989 times, eight 916 times, and nine 963 times. Overall, the confusion matrix shows that this model is effective for predicting handwritten digits, as most of the predictions are along the diagonal and only have a few misclassifications."
+      ],
+      "metadata": {
+        "id": "xi9fg34z-JxV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**6. For your confusion matrix, which mistakes are most likely? Do you find any interesting patterns?**"
+      ],
+      "metadata": {
+        "id": "jL0hKzus-Nlt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The most common mistakes were:\n",
+        "\n",
+        "*  2 predicted as 0 (11 times) or 7 (16 times)\n",
+        "*  3 predicted as 5 (12 times)\n",
+        "*  4 predicted as 9 (21 times)\n",
+        "*  7 predicted as 1 (25 times)\n",
+        "*  8 being as 3 (11 times) or 5 (12 times)\n",
+        "*  9 being predicted as 7 (11 times)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "These misclassifications are visually understandable, as they often appear fairly similar in handwriting. In particular, 4 being mistaken for 9 and 7 being mistaken for 1 were the most frequent patterns in this model, which aligns with how similar these digits can appear in handwriting. These patterns suggest that the model mainly struggles with digits that are already visually similar and confusing. Therefore, the model can still be considered to be effective despite these few misclasification patterns."
+      ],
+      "metadata": {
+        "id": "cdpE1v3E-Qid"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**7. So, this is how computers \"see.\" They convert an image into a matrix of values, that matrix becomes a vector in a dataset, and then we deploy ML tools on it as if it was any other kind of tabular data. To make sure you follow this, invent a way to represent a color photo in matrix form, and then describe how you could convert it into tabular data. (Hint: RGB color codes provide a method of encoding a numeric value that represents a color.)**"
+      ],
+      "metadata": {
+        "id": "fUnxHQLB-TRI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To represent a matrix in color form, we could create three different matrices: red, green, and blue. We could use the RGB color system, which has 8 bits per channel. Each matrix contains the intensity values of 0 to 255 for its respective color using the RGB system. For example, a pixel that is fully red would have a value of 255 in the red matrix, and 0 in both the green and blue matrices. To convert the image into tabular data, we can flatten all three matrices into a single row vector using a reshape function. For a 28×28 color image, this would create a vector with 2352 features per row (28×28×3). Once flattened, each row corresponds to one image vector, and each column is a feature, so the dataset is in tabular form."
+      ],
+      "metadata": {
+        "id": "dd5DSTY8-VpV"
+      }
     }
   ],
   "metadata": {
